Revert: remove Render deployment helper files and env example (placeholder)

--- a/envs/.env.example
+++ b/envs/.env.example
@@ -1,28 +1,3 @@
-# Example environment variables (moved outside submodule)
-# Copy this file to `src/backend/.env` locally and fill values (DO NOT commit secrets).
-
-# Flask settings
-FLASK_ENV=development
-FLASK_DEBUG=True
-SECRET_KEY=change-me-to-a-secure-random-string
-
-# Database settings (PostgreSQL)
-DB_USER=<db_user>
-DB_PASSWORD=<db_password>
-DB_HOST=<db_host>
-DB_PORT=5432
-DB_NAME=<db_name>
-
-# Full connection URL (SQLAlchemy)
-# Example: postgresql+pg8000://<db_user>:<db_password>@<db_host>:5432/<db_name>
-DATABASE_URL=<your_database_url>
-
-# Email settings
-MAIL_SERVER=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USE_TLS=True
-MAIL_USERNAME=<email_username>
-MAIL_PASSWORD=<email_password>
-MAIL_DEFAULT_SENDER=<from_email>
-
-DEV_SHOW_RESET_LINK=0
+# envs/.env.example placeholder (removed by revert)
+# The example file that was added for deployment has been removed.
+# Restore from commit history if needed.
