--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     plan: starter
     root: src/backend
     buildCommand: python -m pip install -r requirements.txt
-    startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT app:app
+    startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT wsgi:app
     envVars:
       - key: FLASK_ENV
         value: production
