--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,9 @@ services:
     env: python
     region: oregon
     plan: starter
-    root: src/backend
+    root: src
     buildCommand: python -m pip install -r requirements.txt
-    startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT wsgi:app
+    startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT backend.wsgi:app
     envVars:
       - key: FLASK_ENV
         value: production
